--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,83 +1,111 @@
-@media only screen and (min-width: 35rem) 
-{
-	main{
-		grid-template-columns: repeat(2, 1fr);
-		column-gap: 20px;
-		padding: 20px 20px;
-	  
-	   }
-	  .section3{
-	   grid-column: 1/3;
-	   margin-top: 20px;
-	  }
-	header img {
-	  width: auto;
-	}
-  
-	header h1 {
-	  font-size: 2rem;
-	}
-  
-	header h2 {
-	  font-size: 1.5rem;
-	}
-  
-	#menuBtn {
-	  display: none;
-	}
-  
-	#menu {
-	  max-height: unset;
-	  opacity: 1;
-	}
-  
-	#menu ul {
-	  display: flex;
-	  flex-direction: row;
-	  visibility: visible;
-	}
-  
-	#menu ul li {
-	  flex-grow: 0;
-	  padding: 0 1.2rem;
-	  
-	}
-  
-	#summary {
-	  position: relative;
-	}
-	
-	#summary > div {
-	  border: 1px solid #ccc;
-	  border-radius: 4px;
-	  background-color: #fff;
-	  padding: 0 2%;
-	  max-width: 30ex;
-	  position: absolute;
-	  top: 10%;
-	  left: 4%;
-	}
-  
-	#article {
-	  display: block;
-	}
-   
-	#article img {
-	  float: right;
-	  min-width: 0;
-	  max-width: 30ex;
-	}
-  
-	#contact {
-	  flex-direction: row-reverse;
-	  justify-content: space-around;
-	}
-  
-	#contact > * {
-	  max-width: 40%;
-	}
-  
-	footer > p {
-	  flex-direction: row;
-	}
-  }
+@media (min-width: 700px) {
+
+    html {
+        max-width: 800px;
+        margin: auto;
+    }
+
+    .social {
+        margin-right: 5px;
+        margin-top: 4px;
+    }
+
+    main {
+        display: grid;
+    }
+
+    #hero {
+        grid-column: 1/4;
+    }
+
+    #news {
+        grid-column: 1/4;
+        grid-row: 2;
+    }
+
+    #spotlights {
+        display: flex;
+        grid-column: 1/4;
+        grid-row: 3;
+    }
+
+    #join {
+        display: block;
+        grid-column: 1/4;
+        grid-row: 4;
+    }
+
+    #event {
+        grid-column: 1/3;
+        grid-row: 5;
+    }
+
+    #wether {
+        grid-column: 3/4;
+        grid-row: 5;
+    }
+
+    #hero,
+    #event,
+    #weather,
+    #join,
+    #news,
+    #spotlights {
+        margin: 1% auto;
+        width: 100%;
+        border: white solid 5px;
+        text-align: center;
+    }
+
+    footer {
+        display: grid;
+    }
+
+    footer img {
+        width: 175px;
+    }
+
+    footer section:nth-of-type(1) {
+        display: flex;
+        grid-row: 1/2;
+        grid-row: 1;
+    }
+
+    footer section:nth-of-type(2) {
+        grid-row: 2/3;
+        grid-row: 1;
+    }
+
+    footer hr {
+        grid-column: 1/3;
+    }
+
+    footer section:nth-of-type(3) {
+        grid-column: 1/3;
+        grid-row: 3;
+    }
+
+    footer p br:nth-of-type(1),
+    footer p br:nth-of-type(2) {
+        display: none;
+    }
+
+    footer p a {
+        display: inline;
+    }
+
+    footer ul {
+        margin: auto;
+        width: 50%;
+        padding: 10px;
+    }
+
+    footer section:nth-of-type(2) {
+        margin: auto;
+    }
+
+    hr {
+        width: 100%;
+    }
+
+}
