--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -127,7 +127,9 @@ em {
 #weather,
 #join,
 #news,
-#spotlights {
+#spotlight1,
+#spotlight2,
+#spotlight3 {
     margin: 3% auto;
     padding: 10% 0%;
     width: 100%;
