--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -155,7 +155,7 @@ em {
 
 footer {
     padding: 5%;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
 }
 
 picture {
