--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -23,7 +23,7 @@
         grid-row: 2;
     }
 
-    #spotlights {
+    #spotlight1, #spotlight2, #spotlight3 {
         display: flex;
         grid-column: 1/4;
         grid-row: 3;
