--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -59,11 +59,21 @@
     }
 
     #hero {
-        grid-column: 2/4;
-        grid-row: 1/3;
+            margin: 3% auto;
+            padding: 10% 0%;
+            width: 66%;
+            border: black solid 2px;
+            text-align: center;
+            grid-column: 2/4;
+            grid-row: 1/3;
     }
 
     #news {
+        margin: 3% auto;
+        padding: 10% 0%;
+        width: 66%;
+        border: black solid 2px;
+        text-align: center;
         grid-column: 2/4;
         grid-row: 3;
     }
@@ -83,20 +93,58 @@
         display: block;
     }
 
-    #join {
-        display: block;
-        grid-column: 1/2;
-        grid-row: 3;
-    }
-
     #event {
-        grid-column: 1/2;
-        grid-row: 1/2;
+        margin: 3% auto;
+        padding: 10% 0%;
+        width: 33%;
+        border: black solid 2px;
+        text-align: center;
+        grid-column: 2/4;
+        grid-row: 1/3;
     }
 
-    #wether {
-        grid-column: 1;
-        grid-row: 2;
+    #weather {
+        margin: 3% auto;
+        padding: 10% 0%;
+        width: 33%;
+        border: black solid 2px;
+        text-align: center;
+        grid-column: 2/4;
+        grid-row: 1/3;
     }
-
+    #join {        
+        margin: 3% auto;
+        padding: 10% 0%;
+        width: 33%;
+        border: black solid 2px;
+        text-align: center;
+        grid-column: 2/4;
+        grid-row: 1/3;}
+    #spotlight1 {
+        margin: 3% auto;
+        padding: 10% 0%;
+        width: 33%;
+        border: black solid 2px;
+        text-align: center;
+        grid-column: 2/4;
+        grid-row: 1/3;
+    }
+    #spotlight2 {        
+        margin: 3% auto;
+        padding: 10% 0%;
+        width: 33%;
+        border: black solid 2px;
+        text-align: center;
+        grid-column: 2/4;
+        grid-row: 1/3;
+    }
+    #spotlight3 {
+        margin: 3% auto;
+        padding: 10% 0%;
+        width: 33%;
+        border: black solid 2px;
+        text-align: center;
+        grid-column: 2/4;
+        grid-row: 1/3;
+    }
 }
