--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -59,20 +59,20 @@
     }
 
     #hero {
-            margin: 3% auto;
-            padding: 10% 0%;
-            width: 66%;
-            border: black solid 2px;
-            text-align: center;
-            grid-column: 2/4;
-            grid-row: 1/3;
+        margin: 3% auto;
+        padding: 10% 0%;
+        width: 66%;
+        border: #70A288 solid 2px;
+        text-align: center;
+        grid-column: 2/4;
+        grid-row: 1/3;
     }
 
     #news {
         margin: 3% auto;
         padding: 10% 0%;
         width: 66%;
-        border: black solid 2px;
+        border: #70A288 solid 2px;
         text-align: center;
         grid-column: 2/4;
         grid-row: 3;
@@ -97,7 +97,7 @@
         margin: 3% auto;
         padding: 10% 0%;
         width: 33%;
-        border: black solid 2px;
+        border: #70A288 solid 2px;
         text-align: center;
         grid-column: 2/4;
         grid-row: 1/3;
@@ -107,7 +107,7 @@
         margin: 3% auto;
         padding: 10% 0%;
         width: 33%;
-        border: black solid 2px;
+        border: #70A288 solid 2px;
         text-align: center;
         grid-column: 2/4;
         grid-row: 1/3;
@@ -116,7 +116,7 @@
         margin: 3% auto;
         padding: 10% 0%;
         width: 33%;
-        border: black solid 2px;
+        border: #70A288 solid 2px;
         text-align: center;
         grid-column: 2/4;
         grid-row: 1/3;}
@@ -124,7 +124,7 @@
         margin: 3% auto;
         padding: 10% 0%;
         width: 33%;
-        border: black solid 2px;
+        border: #70A288 solid 2px;
         text-align: center;
         grid-column: 2/4;
         grid-row: 1/3;
@@ -133,7 +133,7 @@
         margin: 3% auto;
         padding: 10% 0%;
         width: 33%;
-        border: black solid 2px;
+        border: #70A288 solid 2px;
         text-align: center;
         grid-column: 2/4;
         grid-row: 1/3;
@@ -142,7 +142,7 @@
         margin: 3% auto;
         padding: 10% 0%;
         width: 33%;
-        border: black solid 2px;
+        border: #70A288 solid 2px;
         text-align: center;
         grid-column: 2/4;
         grid-row: 1/3;
