--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -14,13 +14,13 @@
     }
 
     .navigation li {
-        display: block;
+        display: grid;
         flex: 1 1 auto;
     }
 
     .navigation a {
         text-align: center;
-        padding: 10%;
+        display: block;
     }
 
     .navigation li:first-child {
@@ -58,24 +58,45 @@
         grid-template-rows: 300px 300px 300px;
     }
 
-    #hero {
-        margin: 3% auto;
-        padding: 10% 0%;
-        width: 66%;
+    #event {
+        width: 33%;
         border: #70A288 solid 2px;
-        text-align: center;
-        grid-column: 2/4;
-        grid-row: 1/3;
+        display: inline-grid;
+        grid-column: 1;
+        grid-row: 1;
+    }
+
+    #hero {
+        width: 50%;
+        border: #70A288 solid 2px;
+        display: inline-grid;
+        grid-column: 2;
+        grid-row: 1;
     }
 
     #news {
-        margin: 3% auto;
-        padding: 10% 0%;
-        width: 66%;
+        width: 50%;
+        border: #70A288 solid 2px;
+        grid-column: 1/4;
+        grid-row: 1/3;
+    }
+
+    #spotlight1 {
+        width: 33%;
         border: #70A288 solid 2px;
         text-align: center;
+        display: inline-grid;
+        grid-column: 3;
+        grid-row: 1;
+    }
+
+    #join {      
+        width: 33%;
+        border: #70A288 solid 2px;
         grid-column: 2/4;
-        grid-row: 3;
+
+        grid-row: 2/3;
+    
     }
 
     #spotlights {
@@ -93,58 +114,30 @@
         display: block;
     }
 
-    #event {
-        margin: 3% auto;
-        padding: 10% 0%;
+    #weather {
         width: 33%;
         border: #70A288 solid 2px;
         text-align: center;
-        grid-column: 2/4;
-        grid-row: 1/3;
+        grid-column: 1;
+        display: inline-grid;
+        grid-row: 2;
+    
     }
 
-    #weather {
-        margin: 3% auto;
-        padding: 10% 0%;
-        width: 33%;
-        border: #70A288 solid 2px;
-        text-align: center;
-        grid-column: 2/4;
-        grid-row: 1/3;
-    }
-    #join {        
-        margin: 3% auto;
-        padding: 10% 0%;
-        width: 33%;
-        border: #70A288 solid 2px;
-        text-align: center;
-        grid-column: 2/4;
-        grid-row: 1/3;}
-    #spotlight1 {
-        margin: 3% auto;
-        padding: 10% 0%;
-        width: 33%;
-        border: #70A288 solid 2px;
-        text-align: center;
-        grid-column: 2/4;
-        grid-row: 1/3;
-    }
     #spotlight2 {        
-        margin: 3% auto;
-        padding: 10% 0%;
         width: 33%;
         border: #70A288 solid 2px;
         text-align: center;
         grid-column: 2/4;
+        display: inline-grid;
         grid-row: 1/3;
+    
     }
     #spotlight3 {
-        margin: 3% auto;
-        padding: 10% 0%;
         width: 33%;
-        border: #70A288 solid 2px;
         text-align: center;
         grid-column: 2/4;
+
         grid-row: 1/3;
     }
 }
