--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -179,7 +179,7 @@ footer p,
 footer a,
 footer li {
     text-align: center;
-    color: var(--accent2-color);
+    color: var(--typography1-color);
     margin: 0px 5px 0px;
     font-size: 1em;
 }
