--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,7 +1,7 @@
 @media (min-width: 1000px) {
 
     .main-logo h1 {
-        font-size: 2.5em;
+        font-size: 2em;
     }
 
     html {
@@ -14,13 +14,13 @@
     }
 
     .navigation li {
-        display: grid;
+        display: block;
         flex: 1 1 auto;
     }
 
     .navigation a {
         text-align: center;
-        display: block;
+        padding: 5%;
     }
 
     .navigation li:first-child {
@@ -51,54 +51,29 @@
     }
 
     footer img {
-        width: 200px;
+        width: 100px;
     }
 
     main {
         grid-template-rows: 300px 300px 300px;
     }
 
-    #event {
-        width: 33%;
-        border: #70A288 solid 2px;
-        display: inline-grid;
-        grid-column: 1;
-        grid-row: 1;
-    }
-
     #hero {
-        width: 50%;
-        border: #70A288 solid 2px;
-        display: inline-grid;
-        grid-column: 2;
-        grid-row: 1;
+        grid-column: 2/4;
+        grid-row: 1/3;
+        margin-bottom: 2px;
+        margin-top: 3px;
+        margin-left: 6px;
     }
 
     #news {
-        width: 50%;
-        border: #70A288 solid 2px;
-        grid-column: 1/4;
-        grid-row: 1/3;
-    }
-
-    #spotlight1 {
-        width: 33%;
-        border: #70A288 solid 2px;
-        text-align: center;
-        display: inline-grid;
-        grid-column: 3;
-        grid-row: 1;
-    }
-
-    #join {      
-        width: 33%;
-        border: #70A288 solid 2px;
         grid-column: 2/4;
-
-        grid-row: 2/3;
-    
+        grid-row: 3;
+        margin-bottom: 2px;
+        margin-top: 3px;
+        margin-left: 6px;
     }
-
+   
     #spotlights {
         display: block;
         grid-column: 4/5;
@@ -106,38 +81,29 @@
     }
 
     #spotlights div {
-        height: 28%;
-        margin-top: 10px;
+        height: 30%;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        margin-left: 5px;
     }
 
     #spotlights div:nth-of-type(3) {
         display: block;
     }
 
+    #join {
+        display: block;
+        grid-column: 1/2;
+        grid-row: 3;
+    }
+
+    #event {
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+
     #weather {
-        width: 33%;
-        border: #70A288 solid 2px;
-        text-align: center;
         grid-column: 1;
-        display: inline-grid;
         grid-row: 2;
-    
-    }
-
-    #spotlight2 {        
-        width: 33%;
-        border: #70A288 solid 2px;
-        text-align: center;
-        grid-column: 2/4;
-        display: inline-grid;
-        grid-row: 1/3;
-    
-    }
-    #spotlight3 {
-        width: 33%;
-        text-align: center;
-        grid-column: 2/4;
-
-        grid-row: 1/3;
     }
 }
