--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -6,8 +6,8 @@
     }
 
     .social {
-        margin-right: 5px;
-        margin-top: 4px;
+        margin-right: 3px;
+        margin-top: 2px;
     }
 
     main {
@@ -23,7 +23,7 @@
         grid-row: 2;
     }
 
-    #spotlight1, #spotlight2, #spotlight3 {
+    #spotlights {
         display: flex;
         grid-column: 1/4;
         grid-row: 3;
@@ -53,7 +53,7 @@
     #spotlights {
         margin: 1% auto;
         width: 100%;
-        border: black solid 2px;
+        border: #DAB785 solid 1px;
         text-align: center;
     }
 
@@ -69,13 +69,11 @@
         display: flex;
         grid-row: 1/2;
         grid-row: 1;
-        display: flex;
     }
 
     footer section:nth-of-type(2) {
         grid-row: 2/3;
         grid-row: 1;
-        display: flex;
     }
 
     footer hr {
@@ -85,7 +83,6 @@
     footer section:nth-of-type(3) {
         grid-column: 1/3;
         grid-row: 3;
-        display: flex;
     }
 
     footer p br:nth-of-type(1),
