--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -1,29 +1,15 @@
-:root {
-    --primary-color: #031D44;
-    --secondary-color: #04395E;
-    --accent1-color: #70A288;
-    --accent2-color: #DAB785;
-    --typography1-color: #D5896F;
-    
-    --heading-font: Gugi, sans-serif;
-    --paragraph-font: Gugi, sans-serif;
-}
-
 img {
-    width: 250px;
+    width: 50px;
 }
 
 header {
     display: grid;
-    background-color: var(--primary-color);
-    padding: 2em;
-    color: var(--typography1-color);
-    margin: 25px;
+    background-color: #04395E;
 }
 
 html,
 body {
-    background-color: var(--secondary-color);
+    background-color: #031D44;
 }
 
 .main-logo {
@@ -37,15 +23,9 @@ body {
 }
 
 .main-logo h1 {
-    color: var(--accent2-color);
+    color: #70A288;
     margin: 30px 5px 0px;
     font-size: 2em;
-}
-
-.main-logo h2 {
-    color: var(--accent2-color);
-    margin: 0px 5px 0px;
-    font-size: 1em;
 }
 
 .social {
@@ -71,15 +51,15 @@ nav {
     display: flex;
     grid-column: 1/3;
     justify-content: center;
+    color: #DAB785;
 }
 
 em {
-    color: var(--accent2-color);
+    color: #DAB785;
     padding-left: 20px;
 }
 
 .navigation {
-    color: #D5896F;
     list-style: none;
     padding: 0px;
     margin: 0;
@@ -87,12 +67,12 @@ em {
 
 .navigation li:first-child {
     display: block;
-    background-color: var(--secondary-color);
+    background-color: #04395E;
 }
 
 .navigation li {
     display: none;
-    background-color: var(--paragraph-background-color);
+    background-color: #04395E;
 }
 
 .navigation a {
@@ -101,12 +81,12 @@ em {
     text-align: center;
     text-decoration: none;
     font-weight: bold;
-    color: var(--accent2-color);
+    color: #DAB785;
 }
 
 .navigation a:hover {
-    color: #70A288;
-    background-color: #70A288;
+    color: black;
+    background-color: #DAB785;
 }
 
 #menu::before {
@@ -128,19 +108,24 @@ em {
 #weather,
 #join,
 #news,
-#spotlight1,
-#spotlight2,
-#spotlight3 {
-    color: #D5896F;
+#spotlights {
     margin: 3% auto;
     padding: 10% 0%;
     width: 100%;
-    border: #70A288 solid 2px;
+    border: #DAB785 solid 2px;
     text-align: center;
 }
 
 #join {
     display: none;
+}
+
+#spotlights div {
+    margin: auto;
+    padding: 5% 0%;
+    width: 95%;
+    border: #DAB785 solid 2px;
+    text-align: center;
 }
 
 #spotlights div:nth-of-type(3) {
@@ -149,7 +134,7 @@ em {
 
 footer {
     padding: 5%;
-    background-color: var(--primary-color);
+    background-color: #04395E;
 }
 
 picture {
@@ -167,8 +152,8 @@ footer div {
 footer h2 {
     margin-top: 0;
     text-align: center;
-    color: var(--accent2-color);
-    font-size: 1.5em;
+    color: #DAB785;
+    font-size: 1em;
 }
 
 footer li {
@@ -179,18 +164,18 @@ footer p,
 footer a,
 footer li {
     text-align: center;
-    color: var(--typography1-color);
+    color: #DAB785;
     margin: 0px 5px 0px;
-    font-size: 1em;
+    font-size: 1.25em;
 }
 
 hr {
-    border: var(--accent1-color) solid 1px;
+    border: #70A288 solid 1px;
     width: 80%;
 }
 
 footer a:hover {
-    color: var(--nav-link-color);
+    color: #DAB785;
 }
 
 footer p a {
