--- a/chamber/styles/discover.css
+++ b/chamber/styles/discover.css
@@ -1,7 +1,7 @@
 body {
     background-color: #04395E;
     color: #D5896F;
-    font-family: Gugi;
+    font-family: "Gugi", sans-serif;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 80px;
