--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -73,23 +73,6 @@
         margin-top: 3px;
         margin-left: 6px;
     }
-   
-    #spotlights {
-        display: block;
-        grid-column: 4/5;
-        grid-row: 1/4;
-    }
-
-    #spotlights div {
-        height: 30%;
-        margin-top: 0px;
-        margin-bottom: 0px;
-        margin-left: 5px;
-    }
-
-    #spotlights div:nth-of-type(3) {
-        display: block;
-    }
 
     #join {
         display: block;
@@ -105,5 +88,8 @@
     #weather {
         grid-column: 1;
         grid-row: 2;
+    }
+    #spotlights {
+        color: #D5896F;
     }
 }
