--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -105,6 +105,7 @@
         grid-row: 2;
         color: #D5896F;
         padding: 0px;
+        
     }
     #spotlight3 {
         grid-column: 3;
@@ -117,5 +118,11 @@
     }
     #hero {
         padding: 0px
+    }
+    .center {
+        display: block;
+      margin-left: grid;
+      margin-right: grid;
+      width: 50%;
     }
 }
