--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -126,4 +126,10 @@
     #hero {
         padding: 0px
     }
+    .center {
+        display: block;
+      margin-left: grid;
+      margin-right: grid;
+      width: 50%;
+    }
 }
