--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,135 +1,107 @@
 @media (min-width: 700px) {
-
     html {
         max-width: 800px;
         margin: auto;
-    }
-
+   }
     .social {
         margin-right: 3px;
         margin-top: 2px;
-    }
-
+   }
     main {
         display: grid;
-    }
-
+   }
     #hero {
         grid-column: 1/4;
-    }
-
+   }
     #news {
         grid-column: 1/4;
         grid-row: 2;
-    }
-
+   }
     #join {
         display: block;
         grid-column: 1/4;
         grid-row: 4;
-    }
-
+   }
     #event {
         grid-column: 1/3;
         grid-row: 5;
-    }
-
+   }
     #wether {
         grid-column: 3/4;
         grid-row: 5;
-    }
-
-    #hero,
-    #event,
-    #weather,
-    #join,
-    #news,
-    #spotlights {
+   }
+    #hero, #event, #weather, #join, #news, #spotlights {
         margin: 1% auto;
         width: 100%;
         border: #DAB785 solid 1px;
         text-align: center;
         color: #D5896F;
-    }
-
+        display: grid;
+   }
     footer {
         display: grid;
-    }
-
+   }
     footer img {
         width: 175px;
-    }
-
+   }
     footer section:nth-of-type(1) {
         display: flex;
         grid-row: 1/2;
         grid-row: 1;
-    }
-
+   }
     footer section:nth-of-type(2) {
         grid-row: 2/3;
         grid-row: 1;
-    }
-
+   }
     footer hr {
         grid-column: 1/3;
-    }
-
+   }
     footer section:nth-of-type(3) {
         grid-column: 1/3;
         grid-row: 3;
-    }
-
-    footer p br:nth-of-type(1),
-    footer p br:nth-of-type(2) {
+   }
+    footer p br:nth-of-type(1), footer p br:nth-of-type(2) {
         display: none;
-    }
-
+   }
     footer p a {
         display: inline;
-    }
-
+   }
     footer ul {
         margin: auto;
         width: 50%;
         padding: 10px;
-    }
-
+   }
     footer section:nth-of-type(2) {
         margin: auto;
-    }
-
+   }
     hr {
         width: 100%;
-    }
+   }
     #spotlight1 {
         grid-column: 3;
         grid-row: 1;
         color: #D5896F;
-        padding: 0px; 
-    }
+   }
     #spotlight2 {
         grid-column: 3;
         grid-row: 2;
         color: #D5896F;
-        padding: 0px; 
-    }
+   }
     #spotlight3 {
         grid-column: 3;
         grid-row: 3;
         color: #D5896F;
-        padding: 0px; 
-    }
+   }
     #event {
-        padding: 0px
-    }
+        padding: 0px 
+   }
     #hero {
-        padding: 0px
-    }
+        padding: 0px 
+   }
     .center {
         display: block;
-      margin-left: grid;
-      margin-right: grid;
-      width: 50%;
-    }
+        margin-left: grid;
+        margin-right: grid;
+        width: 50%;
+   }
 }
