--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -1,80 +1,64 @@
 img {
-    align-items: auto;
+    align-items: center;
 }
-
 header {
     display: grid;
     background-color: #04395E;
 }
-
-html,
-body {
+html, body {
     background-color: #031D44;
 }
-
 .main-logo {
     grid-column: 1;
     display: inline-flex;
 }
-
 .main-logo img {
     width: 75px;
     padding: 20px 5px 5px;
 }
-
 .main-logo h1 {
     color: #70A288;
     margin: 30px 5px 0px;
     font-size: 2em;
 }
-
 .social {
     margin: auto auto;
     display: flex;
     flex-direction: column;
     grid-column: 2;
 }
-
 .social img {
     width: 30px;
 }
-
 nav {
     grid-column: 1/3;
 }
-
 .navigation {
     grid-row: 3;
 }
-
 #datebox {
     display: flex;
     grid-column: 1/3;
     justify-content: center;
     color: #DAB785;
 }
-
 em {
     color: #DAB785;
     padding-left: 20px;
 }
-
 .navigation {
     list-style: none;
     padding: 0px;
     margin: 0;
 }
-
 .navigation li:first-child {
     display: block;
     background-color: #04395E;
 }
-
 .navigation li {
     display: none;
     background-color: #04395E;
 }
-
 .navigation a {
     display: block;
     padding: 2%;
@@ -83,105 +67,78 @@ em {
     font-weight: bold;
     color: #DAB785;
 }
-
 .navigation a:hover {
     color: white;
     background-color: #DAB785;
 }
-
 #menu::before {
     content: "≡";
     font-size: 2em;
 }
-
 .responsive li {
     display: block;
 }
-
 .responsive #menu::before {
     content: "X";
     margin: auto auto;
 }
-
-#hero,
-#event,
-#weather,
-#join,
-#news,
-#spotlight1
-#spotlight2
-#spotlight3 {
+#hero, #event, #weather, #join, #news, #spotlight1 #spotlight2 #spotlight3 {
     margin: 3% auto;
     padding: 10% 0%;
     width: 100%;
     border: #DAB785 solid 2px;
     text-align: center;
     color: #D5896F;
+    display: grid;
 }
-
 #join {
     display: none;
 }
-
 footer {
     padding: 5%;
     background-color: #04395E;
 }
-
 picture {
     margin: auto 0;
 }
-
 footer img {
     width: 150px;
 }
-
 footer div {
     text-align: center;
 }
-
 footer h2 {
     margin-top: 0;
     text-align: center;
     color: #DAB785;
     font-size: 1em;
 }
-
 footer li {
     list-style-type: none;
 }
-
-footer p,
-footer a,
-footer li {
+footer p, footer a, footer li {
     text-align: center;
     color: #DAB785;
     margin: 0px 5px 0px;
     font-size: 1.25em;
 }
-
 hr {
     border: #70A288 solid 1px;
     width: 80%;
 }
-
 footer a:hover {
     color: #DAB785;
 }
-
 footer p a {
     display: none;
 }
-
 ul {
     padding: 0;
     margin: 0;
 }
-
 .social a {
     text-decoration: none;
 }
-
 h6 {
     display: none;
 }
@@ -189,29 +146,26 @@ h6 {
     grid-column: 3;
     grid-row: 1;
     color: #D5896F;
-    padding: 150px;
 }
 #spotlight2 {
     grid-column: 3;
     grid-row: 2;
     color: #D5896F;
-    padding: 150px;
 }
 #spotlight3 {
     grid-column: 3;
     grid-row: 3;
     color: #D5896F;
-    padding: 150px;
 }
 #event {
-    padding: 0px
+    padding: 0px;
 }
 #hero {
-    padding: 0px
+    padding: 0px;
 }
 .center {
     display: block;
-  margin-left: grid;
-  margin-right: grid;
-  width: 50%;
+    margin-left: grid;
+    margin-right: grid;
+    width: 50%;
 }
