--- a/lesson7/styles/lazy.css
+++ b/lesson7/styles/lazy.css
@@ -1,39 +1,27 @@
 body {
     background-color: #04395E;
     color: #D5896F;
-    font-family: Gugi;
+    font-family: "Gugi", sans-serif;
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 80px;
-    grid-auto-rows: 400px;
-    justify-items: center;
     align-items: center;
-    grid-gap: 20px;
-}
-
-p { text-decoration: underline; 
-    text-decoration-color: #70A288;
     text-align: center;
 }
-
+p {
+    text-decoration: underline;
+    text-align: center;
+}
 picture img {
     width: 300px;
-    height: 300px;
-    object-fit: cover;
-    object-position: center;
-    box-shadow: 2px 2px 4px #70A288;
+    height: 200px;
+    animation: img-come-in 8s;
 }
-picture img.in {
-    animation: img-come-in 5s;
-}
-
 @keyframes img-come-in {
     from {
         transform: scale(0.9);
         opacity: 0;
-    }
+   }
     to {
         transform: scale(1);
         opacity: 1;
-    }
+   }
 }
