--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -100,6 +100,7 @@
         color: #D5896F;
         display: flex;
         padding-left: 350px;
+        text-align: center;
     }
     #spotlight2 {
         grid-column: 3;
@@ -107,6 +108,7 @@
         color: #D5896F;
         display: flex;  
         padding-left: 350px;
+        text-align: center;
     }
     #spotlight3 {
         grid-column: 3;
@@ -114,6 +116,7 @@
         color: #D5896F;
         display: flex;
         padding-left: 350px;
+        text-align: center;
     }
     #event {
         padding: 0px
@@ -123,7 +126,8 @@
     }
     .center {
         display: block;
-        width: 50%;
+        grid-column: 1;
+        width: 100%;
         padding-block: 30px;
     }
 }
