--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -64,7 +64,7 @@
         margin-bottom: 2px;
         margin-top: 3px;
         margin-left: 6px;
-        padding: 0px;
+        text-align: center;
     }
 
     #news {
