--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -62,9 +62,9 @@
     #hero {
         grid-column: 2/4;
         grid-row: 1/3;
-        margin-bottom: 2px;
-        margin-top: 3px;
-        margin-left: 6px;
+        margin-bottom: 304px;
+        margin-top: 4px;
+        margin-left: 0px;
         text-align: center;
     }
 
@@ -73,8 +73,8 @@
         grid-row: 3;
         margin-bottom: 2px;
         margin-top: 3px;
-        margin-left: 6px;
         padding: 0px;
+        display: grid;
     }
 
     #join {
