--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -73,8 +73,7 @@
         grid-row: 3;
         margin-bottom: 2px;
         margin-top: 3px;
-        padding: 0px;
-        display: grid;
+        display: flex;
     }
 
     #join {
