--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -64,25 +64,23 @@
         grid-row: 1/3;
         margin-bottom: 304px;
         margin-top: 4px;
-        margin-left: 0px;
+        margin-left: 9px;
         text-align: center;
     }
-
     #news {
         grid-column: 2/4;
         grid-row: 3;
         margin-bottom: 2px;
         margin-top: 3px;
-        display: flex;
+        margin-left: 9px;
+        display: block;
     }
-
     #join {
         display: block;
         grid-column: 1/2;
         grid-row: 3;
         padding: 0px;
     }
-
     #event {
         grid-column: 1/2;
         grid-row: 1/2;
@@ -92,30 +90,31 @@
     #weather {
         grid-column: 1;
         grid-row: 2;
-        padding: 0px;
+        padding: 52px;
+        display: grid;
     }
     #spotlight1 {
         grid-column: 3;
         grid-row: 1;
         color: #D5896F;
-        display: flex;
-        padding-left: 350px;
+        display: grid;
+        padding-left: 175px;
         text-align: center;
     }
     #spotlight2 {
         grid-column: 3;
         grid-row: 2;
         color: #D5896F;
-        display: flex;  
-        padding-left: 350px;
+        display: grid;  
+        padding-left: 175px;
         text-align: center;
     }
     #spotlight3 {
         grid-column: 3;
         grid-row: 3;
         color: #D5896F;
-        display: flex;
-        padding-left: 350px;
+        display: grid;
+        padding-left: 175px;
         text-align: center;
     }
     #event {
