--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,132 +1,64 @@
-@media (min-width: 1000px) {
-
-    .main-logo h1 {
-        font-size: 2em;
-        color: #70A288
-    }
-
-    html {
-        max-width: 1100px;
-        margin: auto;
-    }
-
-    .navigation {
-        display: flex;
-    }
-
-    .navigation li {
-        display: block;
-        flex: 1 1 auto;
-    }
-
-    .navigation a {
-        text-align: center;
-        padding: 5%;
-    }
-
-    .navigation li:first-child {
-        display: none;
-    }
-
-    .social {
-        display: block;
-    }
-
-    .social img {
-        width: 50px;
-    }
-
-    .main-logo img {
-        width: 175px;
-        padding: 20px 5px 5px;
-    }
-
-    .main-logo section {
-        margin: auto;
-        width: 50%;
-        padding: 10px;
-    }
-
-    footer p br:nth-of-type(3) {
-        display: none;
-    }
-
-    footer img {
-        width: 100px;
-    }
-
-    main {
-        grid-template-rows: 300px 300px 300px;
-    }
-
-    #hero {
-        grid-column: 2/4;
-        grid-row: 1/3;
-        margin-bottom: 304px;
-        margin-top: 4px;
-        margin-left: 9px;
-        text-align: center;
-    }
-    #news {
-        grid-column: 2/4;
-        grid-row: 3;
-        margin-bottom: 2px;
-        margin-top: 3px;
-        margin-left: 9px;
-        display: grid;
-        padding-right: 100px;
-    }
-    #join {
-        display: block;
-        grid-column: 1/2;
-        grid-row: 3;
-        padding: 0px;
-    }
-    #event {
-        grid-column: 1/2;
-        grid-row: 1/2;
-        padding: 0px;
-    }
-
-    #weather {
-        grid-column: 1;
-        grid-row: 2;
-        padding: 50px;
-        display: grid;
-    }
-    #spotlight1 {
-        grid-column: 3;
-        grid-row: 1;
-        color: #D5896F;
-        display: grid;
-        padding-left: 175px;
-        text-align: center;
-    }
-    #spotlight2 {
-        grid-column: 3;
-        grid-row: 2;
-        color: #D5896F;
-        display: grid;  
-        padding-left: 175px;
-        text-align: center;
-    }
-    #spotlight3 {
-        grid-column: 3;
-        grid-row: 3;
-        color: #D5896F;
-        display: grid;
-        padding-left: 175px;
-        text-align: center;
-    }
-    #event {
-        padding: 0px
-    }
-    #hero {
-        display: grid;
-    }
-    .center {
-        display: block;
-        width: 90%;
-        padding-block: 10px;
-    }
+@media only screen and (min-width: 1100px) {
+  body {
+      max-width: 85%;
+      margin: auto;
+  }
+  .header-date {
+      font-size: 1.2em;
+  }
+  nav ul li a {
+      padding: 0.5rem 1rem;
+      font-size: 1.2em;
+  }
+  .home-grid {
+      grid-template-columns: 1fr 3fr 1fr;
+  }
+  .join,
+  .weather,
+  .event {
+      grid-column: 1/2;
+  }
+  .join {
+      grid-row: 3/4;
+  }
+  .hero,
+  .news-release {
+      grid-column: 2/3;
+  }
+  .hero {
+      grid-row: 1/3;
+  }
+  .news-release {
+      grid-row: 3/4;
+  }
+  .spotlights {
+      grid-column: 3/4;
+      grid-row: 1/4;
+      flex-direction: column;
+  }
+  .hero h1 {
+      color: black;
+  }
+  .spotlight3 {
+      display: block;
+      text-align: center;
+      background-color: var(--secondary-color);
+      padding: 1em;
+  }
+  .hero,
+  .news-release {
+      grid-column: 2/3;
+  }
+  .footer2 p:nth-child(3) {
+      border-right: 1px solid var(--secondary-color);
+  }
+  form label.top input {
+      padding: 0.25rem 0;
+  }
+  form label.sbs {
+      padding: 0.4rem 0;
+  }
+  .join-box {
+      gap: 2.5rem;
+  }
 }
