--- a/styles/large.css
+++ b/styles/large.css
@@ -2,7 +2,7 @@
     --primary-color: #031D44;
     --secondary-color: #04395E;
     --accent1-color: #70A288;
-    --accent2-color: #DAB785;
+    --accent2-color: #dab78500;
     --typography1-color: #D5896F;
     
     --heading-font: Gugi, sans-serif;
