--- a/styles/base.css
+++ b/styles/base.css
@@ -23,4 +23,44 @@
     .footer-info p, #date-mod{
      font-size: 1em;
     }
-   }
+    
+    @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
+main {
+	max-width: 670px;
+	margin: 0 auto;
+}
+
+.hero2 {
+	margin: 10px auto;
+	position: relative;
+	border: 1px solid rgba(0,0,0,.1);
+	height: 300px;
+}
+
+.hero2 img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.herotemple {
+	position: absolute;
+	top: 30px;
+	left: 30px;
+	background: radial-gradient(#fff, #4D5B97);
+	border: 1px solid rgba(0,0,0,.75);
+	padding: 1.5rem;
+	box-shadow: 0 0 3rem #fff;
+	opacity: 0.75;
+	/* Buenas */
+}
+
+.herotemple p {
+	margin: 0;
+	padding: .25rem;
+	font-weight: 700;
+	font-size: 2rem;
+	font-family:"Great Vibes", serif;
+}
+}
